2024-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Add "apptainer".
	(tramp--test-supports-processes-p): Extend function.

2024-02-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Adapt.
	(tramp--test-container-oob-p): New defun.
	(tramp-test17-dired-with-wildcards, tramp-test35-remote-path)
	(tramp-test41-special-characters): Use it.
	(tramp--test-set-ert-test-documentation): Use `split-string'.

2024-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-set-ert-test-documentation): New defun.
	(tramp--test-deftest-with-stat, tramp--test-deftest-with-perl)
	(tramp--test-deftest-with-ls): Use it to define docstring.

2024-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-archive-tests.el (tramp-archive-test-file-archive)
	(tramp-archive-test-archive): Don't use `defconst` if it's not
	constant.

	* tramp-tests.el (tramp--test-instrument-test-case)
	(tramp-test01-file-name-syntax): Use more precise regexp.

2024-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-file-name-completion)
	(tramp-test26-interactive-file-name-completion): Run also on MS Windows.

2024-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (ert-remote-temporary-file-directory):
	Make it a defvar.

2023-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.0 released.

2023-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test35-exec-path-direct-async)
	(tramp-test35-remote-path-direct-async): New tests.

2023-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test18-file-attributes)
	(tramp-test35-remote-path): Adapt tests.

2023-12-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-signal-process): Extend.

2023-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-signal-process): Extend.
